--- a/templates/admin.html
+++ b/templates/admin.html
@@ -188,7 +188,7 @@
 
         <!-- 푸터 -->
         <footer class="footer">
-            <p>© 2024 사내 규정 검색기 - 관리자 페이지</p>
+            <p>© <span id="current-year">2024</span> 사내 규정 검색기 - 관리자 페이지</p>
         </footer>
     </div>
 
